--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <span>&#169;</span> 2023 Complex UI. All rights reserved.
                     </div>
                     <div class="col">
-                        <a class="btn btn-primary float-end" href="#navbar-section">Back to Top</a>
+                        <a class="btn btn-primary float-end" href="#pagetop">Back to Top</a>
                     </div>
                 </div>
     
