--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
               <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
 
-            <div class="carousel-inner" >
+            <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="./resources/pexels-nadia-hristova-15940872.jpg" alt="First slide">
+                <img class="d-block w-100" style="height:90vh;" src="./resources/pexels-nadia-hristova-15940872.jpg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
@@ -65,7 +65,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./resources/pexels-frans-van-heerden-624015.jpg" alt="Second slide">
+                <img class="d-block w-100" style="height:90vh;" src="./resources/pexels-frans-van-heerden-624015.jpg" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
@@ -73,7 +73,7 @@
                   </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./resources/pexels-stein-egil-liland-3408744.jpg" alt="Third slide">
+                <img class="d-block w-100" style="height:90vh;" src="./resources/pexels-stein-egil-liland-3408744.jpg" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
