--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="d-block w-100" style="height:90vh;" src="./resources/pexels-nadia-hristova-15940872.jpg" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-md-block ccaption">
                     <h5>First slide label</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                      <button type="button" class="btn btn-primary">Call to Action</button>
@@ -66,7 +66,7 @@
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" style="height:90vh;" src="./resources/pexels-frans-van-heerden-624015.jpg" alt="Second slide">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-md-block ccaption">
                     <h5>Second slide label</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                   <button type="button" class="btn btn-primary">Call to Action</button>
@@ -74,7 +74,7 @@
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" style="height:90vh;" src="./resources/pexels-stein-egil-liland-3408744.jpg" alt="Third slide">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-md-block ccaption">
                     <h5>Third slide label</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                    <button type="button" class="btn btn-primary">Call to Action</button>
